platform/kb-stack/base/networkpolicy/allow-egress-normalizer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kb-allow-egress-normalizer
  namespace: kb-system
spec:
  podSelector:
    matchLabels:
      app: normalizer
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
