platform/kb-stack/base/networkpolicy/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kb-allow-egress
  namespace: kb-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kb-system
    - to:
        - podSelector:
            matchLabels:
              app: minio
      ports:
        - protocol: TCP
          port: 9000
    - to:
        - ipBlock:
            cidr: 10.105.248.237/32
      ports:
        - protocol: TCP
          port: 3306
    - to:
        - ipBlock:
            cidr: 10.96.188.166/32
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - ipBlock:
            cidr: 10.110.163.108/32
      ports:
        - protocol: TCP
          port: 4000
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: qdrant
      ports:
        - protocol: TCP
          port: 6333
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: holmesgpt
      ports:
        - protocol: TCP
          port: 80
